--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -22,3 +22,71 @@ footer {
   padding-top:    30px !important;
   padding-bottom: 30px !important;
 }
+
+.box {
+  background: #fff !important;
+  box-shadow: 0 3px 3px #ccc !important;
+
+  &.padded > .ribbon.label {
+    left: -45px !important;
+  }
+}
+
+.padded {
+  padding: 30px !important;
+
+  &.mini {
+    padding: 5px !important;
+  }
+
+  &.tiny {
+    padding: 7px !important;
+  }
+
+  &.small {
+    padding: 10px !important;
+  }
+
+  &.medium {
+    padding: 15px !important;
+  }
+
+  &.large {
+    padding: 35px !important;
+  }
+
+  &.big {
+    padding: 40px !important;
+  }
+
+  &.huge {
+    padding: 50px !important;
+  }
+
+  &.massive {
+    padding: 70px !important;
+  }
+}
+
+.margin-vr {
+  margin-top:    30px !important;
+  margin-bottom: 30px !important;
+}
+
+.margin-t {
+  margin-top: 30px !important;
+}
+
+.margin-b {
+  margin-bottom: 30px !important;
+}
+
+footer {
+  margin-top:     40px !important;
+  padding-top:    30px !important;
+  padding-bottom: 30px !important;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
